--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "@flaticon/flaticon-uicons": "3.3.1",
+    "@types/d3": "7.4.3",
+    "clsx": "2.1.1",
+    "d3": "7.9.0",
+    "next": "14.2.5",
+    "react": "18",
+    "react-dom": "18",
+    "react-router-dom": "6.25.1",
+    "tailwind-merge": "2.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "@types/node": "20",
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "eslint": "8",
+    "eslint-config-next": "14.2.5",
+    "postcss": "8",
+    "tailwindcss": "3.4.1",
+    "typescript": "5"
   }
 }
